versions/1.21/translated/ru_ru/players/troubleshooting/uploading-logs.md
---
title: Загрузка логов
description: Как загрузить логи для устранения проблем.
authors:
  - IMB11

search: false
---

# Загрузка логов {#uploading-logs}

При устранении проблем часто бывает необходимо предоставить логи, которые помогут определить причину проблемы.

## Почему я должен загружать журналы? {#why-should-i-upload-logs}

Загрузка логов позволяет другим людям в устранении проблем гораздо быстрее, чем просто вставка логов в сообщение в чате или на форуме. Это также позволяет вам делиться своими логами с другими людьми без необходимости копировать и вставлять их.

Некоторые сайты для текстов также предоставляют подсветку синтаксиса для логов, что облегчает их чтение, а также они могут подвергать цензуре конфиденциальную информацию, например, системную информацию или ваш ник.

## Краш-репорты {#crash-reports}

Краш-репорты генерируются автоматически при краше игры. Они содержат только информацию о краше, а не фактические логи игры. Они находятся в папке `crash-reports` в папке игры.

Дополнительные сведения о краш-репортах смотрите [в гайде о краш-репортах](./crash-reports).

## Нахождение логов {#locating-logs}

Этот гайд относится к официальному лаунчеру (или же "ванильный лаунчер"). Для сторонних лаунчеров вам следует ознакомиться с их документацией.

Логи находятся в папке `logs` в папке игры, которую можно найти в следующих местах, в зависимости от вашей операционной системы:

::: code-group

```:no-line-numbers [Windows]
%appdata%\.minecraft
```

```:no-line-numbers [macOS]
~/Library/Application Support/minecraft
```

```:no-line-numbers [Linux]
~/.minecraft
```

:::

Файл с последними логами называется `latest.log`, предыдущие логи называются по шаблону `гггг-мм-дд_номер.log.gz`.

## Загрузка логов {#uploading-logs-online}

Логи могут быть загружены в различные сервисы, такие как:

- [Pastebin](https://pastebin.com/)
- [GitHub Gist](https://gist.github.com/)
- [mclo.gs](https://mclo.gs/)
